# digidox_MCP

./: .gitignore  README.md  config.ini.example  pyproject.toml  requirements.txt
digidox/: server.py
mcp/: pyproject.toml
mcp/digidox/: __init__.py  auth.py  server.py  server_api.py
ocr/: config.py  prompt_builder.py  server.py
ocr/demosheet_vt/static/css/: style.css
ocr/demosheet_vt/static/js/: app.js
ocr/demosheet_vt/templates/: index.html
ocr/itsuwa/static/css/: style.css
ocr/itsuwa/static/js/: app.js
ocr/itsuwa/templates/: index.html
ocr/thermofisher/static/css/: style.css
ocr/thermofisher/static/js/: app.js
ocr/thermofisher/templates/: index.html
ocr/viewer/static/css/: style.css
ocr/viewer/static/js/: app.js
ocr/viewer/templates/: index.html
ocr/yamato/static/js/: app.js
ocr/yamato/templates/: index.html
