[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "digidox"
version = "0.1.0"
description = "DigiDox MCP Server"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.scripts]
digidox-mcp = "digidox.server:main"
